<resources>
    <string name="app_name">newPj</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="nom_livre">Nom Livre</string>
    <string name="titre">Titre</string>
    <string name="auteur">Auteur</string>
    <string name="editeur">editeur</string>
    <string name="nombre_de_pages">Nombre de Pages</string>
    <string name="isbn">ISBN</string>
    <string name="ajouter_livre">Ajouter Livre</string>
    <string name="origine">Origine</string>
    <string name="specialite">Spécialité</string>
    <string name="nombre_de_copies">Nombre de copies</string>
    <string name="nom_donneur">Nom Donneur</string>
    <string name="situation_professionnelle">Situation Professionnelle</string>
    <string name="cin">CIN</string>
    <string name="t_l_phone_donneur">Téléphone Donneur</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
