<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biblio"
    tools:context=".AjouterLivre">

    <TextView
        android:id="@+id/ajouterProduit"
        android:text="Ajouter Livre"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/titre"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/titre"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/auteur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/auteur"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/editeur"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/nbPage"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre_de_pages"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:inputType="number" />

    <EditText
        android:id="@+id/isbn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/isbn"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:inputType="number" />

    <Button
        android:id="@+id/ajouter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#d5ead3"
        android:text="@string/ajouter_livre" />


</LinearLayout>
